UI text of application with metal pipeline is lost when another application is launched with OpenGL pipeline

XMLWordPrintable

    • 2d
    • x86_64
    • os_x

      Steps to see the issue :

      1) Make sure that the Automatic graphics swtiching is checked under "System Preferences -> Energy Saver". This is the default option.
      2) Launch SwingSet2 with -Dsun.java2d.metal=true
      3) Launch SwingSet2 with -Dsun.java2d.metal=false

      On step 3, UI text of SwingSet2 launched in step 2 is lost.

      See the attached screenshot - on the left side, there is SwingSet2 with metal pipeline showing the issue. On the right side, there is SwingSet2 with OpenGL pipeline.

      Tested on MacBook Pro 16" with discrete graphics card (macOS 10.15.6)

        1. NetBeans_GfxSwitch.png
          524 kB
          Kevin Rushforth
        2. nb-crash-report.log
          128 kB
          Kevin Rushforth
        3. hs_err_pid21128.log
          98 kB
          Kevin Rushforth
        4. Screenshot 2020-08-28 at 2.40.15 PM.png
          704 kB
          Ajit Ghaisas

            Assignee:
            Ajit Ghaisas
            Reporter:
            Ajit Ghaisas
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: