8252499: UI text of application with metal pipeline is lost when another application is launched with OpenGL pipeline